--- a/main.tex
+++ b/main.tex
@@ -267,7 +267,7 @@ directly to the pseudo-carbon.
 This gives multiple variables we can use to manipulate the properties of the system.
 We can alter the strength and diffuseness of the \(p\) and \(s\) potentials themselves,
 as well as vary the distances \(d\) and \(c\) by moving the \(s\)-potentials.
-In this article, we fix \(c = 0.25\;a.u.\).
+In this article, we fix \(c = 0.25\;a.u.; d=0.5\;a.u.\).
 
 \subsubsection{Extraction of the $p$ potential parameters}
 It is possible to obtain the potential parameters entirely by empirical means, which is what we do for the $s$-potentials.
@@ -318,7 +318,7 @@ Clearly, the exponent should be chosen to give us a strong overlap with the mole
 orbital we wish to influence.
 Hence we arrive at a \(p_{z}\)-potential that should be physically meaningful.
 The maximum overlap possible ($\approx$ 0.79) was obtained with an exponent
-of $0.295$., which leads to a coefficient of $-3.267\;a.u.$.
+of $0.295$, which leads to a coefficient of $-3.267\;a.u.$.
 
 \subsubsection{Extraction of the six $s$ potentials parameters}
 Now that we setup the $p$ potential placed at the nucleus, we shall define
