--- a/main.tex
+++ b/main.tex
@@ -476,7 +476,8 @@ The basis set is def-SV(P).}
 \label{table:alkene_errors}
 \end{table}
 
-Also compared are TD-DFT results for this system and results of some of the authors' previous work, which match to within 3\%.\cite{drujon_pseudopotentials_2013}
+Also compared are TD-DFT results for this system and results of some of the authors' previous work,
+which match to within 3\% (see supplementary materials).\cite{drujon_pseudopotentials_2013}
 %Let us recall here that in our previous work potentials were placed at the center of bonds.
 
 \subsection{Larger chains and fused rings}
