change comment on the timing in the introduction

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % Modified for use with JCC - Madhusudan Singh Copyright (C) (2012). All rights reserved.
-%\documentclass[aip,reprint]{revtex4-1}
-\documentclass[aip]{revtex4-1}
+\documentclass[aip,reprint]{revtex4-1}
+%\documentclass[aip]{revtex4-1}
 
 \setlength{\oddsidemargin}{0in}  %left margin position, reference is one inch
 \setlength{\textwidth}{6.5in}    %width of text=8.5-1in-1in for margin
@@ -176,12 +176,12 @@ out of the box in any standard quantum chemistry software.
 Thus, no modification of the source code should be done.
 This supplementary constraint will be fulfilled by strategically positioning the pseudo-potentials
 we intend to use. 
-We want to stress here that the gain in computational time is not our goal.
-It is clear that replacing the bi-electronic interactions with a set of mono-electronic integrals
+Teh replacement of bi-electronic interactions with a set of mono-electronic integrals
 will result in drastic gains in timings.
-But our puropose is more to see whether our approach of extracting pseudo-potentials
+The purpose of the current work is not to study the time gain from the use of the pseudo-potentials
+that we extract but more to see whether our approach of extracting pseudo-potentials
 for hybridised atoms is possible with strictly local pseudo-potentials.
-A study of timings is available in the supplementary material.
+A study of timings is yet available in the supplementary material.
 
 Pseudo-potentials for hybridised carbon
 atoms have been already successfully extracted in a previous work of ours.\cite{drujon_pseudopotentials_2013}
