change the caption for TDDFT results

--- a/main.tex
+++ b/main.tex
@@ -448,8 +448,7 @@ Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for e
 \end{center}
 \caption{Comparison of the HOMO energy ($\varepsilon_{HOMO}$),
 the ionisation energy (I.E.),
-the first singlet-triplet $\pi-\pi*$ excitation energy ($\Delta_{ST}$) and
-the TD-DFT first excitation energy
+the first singlet-triplet $\pi-\pi*$ excitation energy ($\Delta_{ST}$ and TD-DFT)
 between the
 all electron reference system and the optimal pseudo-potential across a range of chain alkenes.
 The $\Delta_{ST}$ values were obtained as the difference
@@ -492,8 +491,7 @@ which match to within 3\% (see supplementary materials).\cite{drujon_pseudopoten
 
 \caption{Comparison of the HOMO energy ($\varepsilon_{HOMO}$),
 the ionisation energy (I.E.),
-the first singlet-triplet excitation energy ($\Delta_{ST}$) and
-the TD-DFT first excitation energy
+the first singlet-triplet $\pi-\pi*$ excitation energy ($\Delta_{ST}$ and TD-DFT)
 between the
 all electron reference system and the optimal pseudo-potential across a range of ring molecules.
 The $\Delta_{ST}$ values were obtained as the difference
@@ -545,8 +543,7 @@ The basis set is def-SV(P).}
 
 \caption{Comparison of the HOMO energy ($\varepsilon_{HOMO}$),
 the ionisation energy (I.E.),
-the first $\pi-\pi*$ singlet-triplet excitation energy ($\Delta_{ST}$) and
-the TD-DFT first excitation energy
+the first singlet-triplet $\pi-\pi*$ excitation energy ($\Delta_{ST}$ and TD-DFT)
 between the
 all electron reference system and the optimal pseudo-potential across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).
 The $\Delta_{ST}$ values were obtained as the difference
