change to  pi pi* notation

--- a/main.tex
+++ b/main.tex
@@ -434,8 +434,10 @@ When running these calculations the occupation of orbitals is specified manually
 
 \subsection{Alkene chains: C\(\mathbf{_{2n}}\)H\(\mathbf{_{2n+2}}\), \(\mathbf{2 \leq n \leq 12}\)}
 
-Taking the optimal parameters we test them against a series of chain alkenes up to length C\(_{12}\)H\(_{14}\), using a variety of functionals. In each case, the geometry of the reference system is optimised according to the method used, 
-before taking the reference geometry and applying the pseudo-potentials from Table \ref{tab:res_ourPP}. 
+Taking the optimal parameters we test them against a series of chain alkenes up to
+length C\(_{12}\)H\(_{14}\), using a variety of functionals. 
+In each case, the geometry of the reference system is optimised according to the method used,
+before taking the reference geometry and applying the pseudo-potentials from Table \ref{tab:res_ourPP}.
 Figure \ref{fig:alkenes_hf_dft} shows the results.
 Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested. The pattern of increasing HOMO energy and decreasing cation-singlet and triplet-singlet energies seen in the reference systems is well replicated by the pseudo-alkenes, with the energies following the same gradient.
 
@@ -466,7 +468,7 @@ Calculations were done at the PBE0/def-SV(P) level.}
 $\varepsilon_{HOMO}$    & 1.3 & 4.0 & 8.5 & 12.0 &  9.7 \\
 I.E.                    & 5.3 & 6.0 & 8.1 & 10.1 &  9.0 \\
 $\Delta_{ST}$           & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 \\
-TD-DFT First Excitation &   - & 2.6 & 2.8 &  6.3 &  6.9 \\ 
+TD-DFT $\pi-\pi*$       &   - & 2.6 & 2.8 &  6.3 &  6.9 \\ 
 \hline\hline
 \end{tabular}
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
@@ -524,7 +526,7 @@ by the pseudo-systems, and the percentage errors, displayed in Table
 $\varepsilon_{HOMO}$    & 3.4 &  9.3  & 13.4 & 17.1 & 14.7 \\
 I.E.                    & 7.4 & 10.0  & 12.5 & 14.4 & 13.0 \\
 $\Delta_{ST}$           & 3.3 &  1.9  &  1.7 &  6.8 &  6.7 \\
-TD-DFT First Excitation &   - &  3.6  &  2.7 &  6.3 &  7.0 \\ 
+TD-DFT $\pi-\pi*$       &   - &  3.6  &  2.7 &  6.3 &  7.0 \\ 
 \hline\hline
 \end{tabular}
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
@@ -561,7 +563,7 @@ Calculations were done at the PBE0/def-SV(P) level.}
 $\varepsilon_{HOMO}$    &  1.8 &  7.3   &  11.3   &  16.7    &  13.6 \\
 I.E.                    & 25.1 &  6.7   &   9.4   &  10.3    &  11.6 \\
 $\Delta_{ST}$           & 55.3 & 85.8   &  83.4   & 239.8    & 320.2 \\
-TD-DFT First Excitation &    - &  1.0   &   6.1   &   5.6    &   2.9 \\ 
+TD-DFT $\pi-\pi*$       &    - &  1.0   &   6.1   &   5.6    &   2.9 \\ 
 \hline\hline
 \end{tabular}
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
