add final comment

--- a/main.tex
+++ b/main.tex
@@ -653,6 +653,20 @@ implements atomic pseudo-potentials as we provide all the necessary parameters.
 We are now working on extending our extraction method to other hybridised atoms
 in order to provide a library of such potentials.
 
+\section{Acknowledgments}
+The authors acknowledge the french Ministère de l'éducation
+nationale et de la recherche for providing the PhD grant of A. Punter.
+
+\section{Supplementary materials}
+In the supplementary materials are provided:
+\begin{itemize}
+\item a spreadsheet file with all the calculated energies;
+\item all the geometries used for the calculations;
+\item a discussion about the timings using the pseudo potentials as compared to reference
+calculations;
+\item the trial and error process used to finally extract suitable parameters for
+the optimal pseudo-potential.
+\end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % BIBLIOGRAPHY
 
