--- a/main.tex
+++ b/main.tex
@@ -443,7 +443,7 @@ Calculations were done at the PBE0/def-SV(P) level.}
 $\varepsilon_{HOMO}$    & 1.3 & 4.0 & 8.5 & 12.0 &  9.7 \\
 I.E.                    & 5.3 & 6.0 & 8.1 & 10.1 &  9.0 \\
 $\Delta_{ST}$           & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 \\
-TD-DFT First Excitation &   - & 2.6 & 2.8 &  6.3 &  6.9 \\ 
+TD-DFT First Excitation & 11.6 & 2.6 & 2.8 &  6.3 &  6.9 \\ 
 \hline\hline
 \end{tabular}
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
@@ -501,7 +501,7 @@ by the pseudo-systems, and the percentage errors, displayed in Table
 $\varepsilon_{HOMO}$    & 3.4 &  9.3  & 13.4 & 17.1 & 14.7 \\
 I.E.                    & 7.4 & 10.0  & 12.5 & 14.4 & 13.0 \\
 $\Delta_{ST}$           & 3.3 &  1.9  &  1.7 &  6.8 &  6.7 \\
-TD-DFT First Excitation &   - &  3.6  &  2.7 &  6.3 &  7.0 \\ 
+TD-DFT First Excitation & 13.5 &  3.6  &  2.7 &  6.3 &  7.0 \\ 
 \hline\hline
 \end{tabular}
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
@@ -539,7 +539,7 @@ Calculations were done at the PBE0/def-SV(P) level.}
 $\varepsilon_{HOMO}$    &  1.8 &  7.3   &  11.3   &  16.7    &  13.6 \\
 I.E.                    & 25.1 &  6.7   &   9.4   &  10.3    &  11.6 \\
 $\Delta_{ST}$           & 55.3 & 85.8   &  83.4   & 239.8    & 320.2 \\
-TD-DFT First Excitation &    - &  1.0   &   6.1   &   5.6    &   2.9 \\ 
+TD-DFT First Excitation & 30.1 &  1.0   &   6.1   &   5.6    &   2.9 \\ 
 \hline\hline
 \end{tabular}
 \caption{Mean relative errors (in percent) across methods (HF or different functionals)
