--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \begin{abstract}
 A pseudo-potential system for recreating an sp\(^{2}\) carbon atom is built 
 and tested as a building block for various pseudo-hydrocarbon chain and ring systems.  
-This pseudo-system has a central charge of 1, thus it contains only one
+This pseudo-system has a central charge of one, thus it contains only one
 electron. It is employed in \textsl{ab-initio} calculations 
 on small hydrocarbons to polycyclic aromatic hydrocarbons.
 The relative errors obtained with the PBE0 functional range from
@@ -115,7 +115,7 @@ core electrons (and effects due to the corresponding nuclear charge) are
 replaced by an operator which is quick to evaluate and the active electrons are treated
 explicitly.\cite{dolg_relativistic_2012}
 In the same vein, model potentials (\showCustomItem) replace a frozen electronic density (computed from the atom)
-by a series of operators, the which depend on the level of
+by a series of operators, which depend on the level of
 refinement required.\cite{huzinaga_1994_1995}
 
 The effective group potentials (\showCustomItem) bridge the frozen density and the core potential
@@ -174,14 +174,12 @@ will contain exactly one explicit nuclear charge and one explicit electron.
 Moreover, the method should be usable 
 out of the box in any standard quantum chemistry software.
 Thus, no modification of the source code should be done.
-This supplementary constraint will be fulfilled by strategically positioning the pseudo-potentials
+This supplementary constraint will be fulfilled by strategically positioning in space the pseudo-potentials
 we intend to use. 
-Teh replacement of bi-electronic interactions with a set of mono-electronic integrals
-will result in drastic gains in timings.
-The purpose of the current work is not to study the time gain from the use of the pseudo-potentials
-that we extract but more to see whether our approach of extracting pseudo-potentials
+The replacement of bi-electronic interactions with a set of mono-electronic integrals
+will result in drastic gains in timings, a study of which is available in the supplementary material.
+However, the main purpose of the current work is not to study the time gain from the use of our pseudo-potentials but to show that our approach of extracting pseudo-potentials
 for hybridised atoms is possible with strictly local pseudo-potentials.
-A study of timings is yet available in the supplementary material.
 
 Pseudo-potentials for hybridised carbon
 atoms have been already successfully extracted in a previous work of ours.\cite{drujon_pseudopotentials_2013}
@@ -207,7 +205,7 @@ to some physically grounded values.
 In a third part, the optimal pseudo-potential is defined. Details of the step-by-step extraction
 are given in the supplementary material.
 The application part focuses on the performances of the optimal pseudo-potential.
-It is shown that the properties can be well reproduced save when dealing with
+It is shown that the properties can be well reproduced except when dealing with
 systems in which spin contamination is large.
 For these cases, a solution is provided.
 
@@ -236,11 +234,11 @@ between the dormant and the active electrons.
 
 As will be discussed in the following sections,
 the \(p\) pseudo-potential allows us to reproduce atomic properties, when the
-\(s\)-potentials mimic electrostatic electron pair repulsion. The pseudo-potentials are mono-electronic operators, thus they shall not be able to reproduce fully bi-electronic interactions. Knowing this, we adjust the parameters of the \(s\)-potentials for the pseudo-system to have a wavefunction in which properties, such as spatial extent, energy and excitation energies, are as close as possible to those of the reference system.
+\(s\)-potentials mimic electrostatic electron pair repulsion. The pseudo-potentials are mono-electronic operators, thus they shall not be able fully to reproduce bi-electronic interactions. Knowing this, we adjust the parameters of the \(s\)-potentials for the pseudo-system to have a wavefunction in which relevant properties, such as spatial extent, energy and excitation energies, are as close as possible to those of the reference system.
 
 \subsection{Extraction for the CH$_3^\bullet$ radical}
 \label{section:potential_derivation}
-Let us take the planar CH\(^{\bullet}_{3}\) (d$_{CH}=2.0466$ $a.u.$, HF/def-SV(P)) as starting system to be reproduced.
+Let us take the planar CH\(^{\bullet}_{3}\) (d$_{CH}=2.0466$ $a.u.$, HF/def-SV(P)) as the starting system to be reproduced.
 It is the smallest system containing one and only one sp$^2$ hybridised carbon atom.
 This choice allows us to isolate the different electrostatic interactions
 to build a physically meaningful model.
@@ -296,7 +294,9 @@ Next, we need to find a value for \( \langle r \rangle \). We can do this by cal
 \label{equation:exp_r}
 \end{equation}
 
-where \(\psi_{p_{z}}\) are the molecular orbitals extracted from a reference calculation of CH\(^{\bullet}_{3}\). From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). Even if we shall use the semi-local pseudo-potential definition for the calculations, for a quick evaluation of overlap effects between the basis set and the pseudo-potential, we assume a non-local pseudo-potential definition. We define:
+where \(\psi_{p_{z}}\) are the molecular orbitals extracted from a reference calculation of CH\(^{\bullet}_{3}\). From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). 
+
+It isn't sufficient simply to use this value however, as our simple pseudo-potential will not overlap neatly with the $2p_{z}$ orbital itself. It is therefore necessary to correct for the imperfect overlap. Even if we shall use the semi-local pseudo-potential definition for the calculations, for a quick evaluation of overlap effects between the basis set and the pseudo-potential, we assume a non-local pseudo-potential definition. We define:
 \begin{equation}
 S = \langle \psi_{p_{z}} | \chi \rangle
 \end{equation}
@@ -317,16 +317,14 @@ We now have the power to choose a \(p_{z}\) pseudo-potential solely based on the
 exponent, and the \(Z_{eff}\) then follows from the above.
 Clearly, the exponent should be chosen to give us a strong overlap with the molecular
 orbital we wish to influence.
-Hence we arrive at a \(p_{z}\)-potential that should be physically meaningful.
-The maximum overlap possible ($\approx$ 0.79) was obtained with an exponent
-of $0.295$, which leads to a coefficient of $-3.267\;a.u.$.
+Hence we arrive at a \(p_{z}\)-potential that should be physically meaningful. The optimal values that we found, those which best reproduced the chosen physical characteristics of the system, were a coefficient of $-3.91$ and an exponent of $0.624$. See the supplementary information for further detail.
 
 \subsubsection{Extraction of the six $s$ potentials parameters}
-Now that we setup the $p$ potential placed at the nucleus, we shall define
+Now that we have set up the $p$ potential placed at the nucleus, we shall define
 the parameters for the $s$ potentials surrounding the nucleus.
 To do so, we decide to focus on the reproduction of the energy of the singly
-occupied HOMO of this system.
-At the HF/def-SV(P) level, the energy of this orbital is $-10.537\;eV$.
+occupied HOMO of this system
+at the HF/def-SV(P) level. The energy of this orbital is $-10.537\;eV$.
 This value can be reproduced exactly with a coefficient of $-7.524\;a.u.$
 and an exponent of $10.0$.
 
@@ -337,15 +335,15 @@ when dealing with $\pi$ molecular interactions as it does not contain
 information about $\pi$ bond.
 In fact, the use of the pseudo-potential extracted in the previous section on CH$_3^\bullet$
 leads to catastrophic results when used to reproduce the ethene $\pi$ cloud (not shown here).
-Thus, a reparametrization is necessary.
+Thus, a reparametrisation is necessary.
 
 We intend to extract a pseudo-potential, which interacts properly with 
-other $\pi$ carrying atoms, be they pseudo-systems or real systems.
-Furthermore, we expect our hypothesis to be grounded and should be able to
+other $\pi$-carrying atoms, be they pseudo-systems or real systems.
+Furthermore, we expect our hypothesis to be grounded and to be able to
 extract parameters on as few data as possible.
 Thus, we extracted the optimal pseudo-potential by a step by step procedure described in 
 the supplementary materials on the smallest $\pi$ system: the ethylene molecule.
-Based on Equation \ref{eq:ourPP}, we define the complete pseudo potential as:
+Based on Equation \ref{eq:ourPP}, we define the complete pseudo-potential as:
 
 \begin{equation}
 \label{eq:ourPPwithparams}
@@ -354,9 +352,15 @@ A\exp(-\alpha r^2)\left|Y_{1,m}\right>\left<Y_{1,m}\right|+
 \sum_{i=1}^6C\exp(-\gamma R_i^2)\left|Y_{0,0}\right>\left<Y_{0,0}\right|
 \end{equation}
 with $R_i$ the radius relative to the position of the $s$ pseudo-potential.
-As represented in Figure \ref{figure:ref_pseudo_diagram}, 6 pseudo-potentials are positioned around
+As represented in Figure \ref{figure:ref_pseudo_diagram}, six pseudo-potentials are positioned around
 the pseudo-nucleus at positions given in Table \ref{tab:params}.
 \begin{table}[ht]
+\caption{\label{tab:params}Optimal parameters obtained for the pseudo 
+$\pi$ carbon atom at the HF/def-SV(P) level of theory.
+Coordinates are relative to the position of the nucleus.
+In this work, $c=0.25\;a.u.$ and $d=0.5\;a.u.$.
+Coefficients are in a.u..
+}
 \begin{tabular}{ccccrr}
 \hline\hline
 Type & x & y & z & Coeff. & Exp. \\
@@ -370,27 +374,13 @@ $s$  & $\frac{-d\sqrt{3}}{2}$ & $\frac{d}{2}$  & $-c$ & $C=1.5$   & $\gamma=0.5$
 $p$  & $0$                    & $0$            & $0$  & $A=-3.91$ & $\alpha=0.624$ \\
 \hline\hline
 \end{tabular}
-\caption{\label{tab:params}Optimal parameters obtained for the pseudo 
-$\pi$ carbon atom at the HF/def-SV(P) level of theory.
-Coordinates are relative to the position of the nucleus.
-In this work, $c=0.25\;a.u.$ and $d=0.5\;a.u.$.
-Coefficients are in a.u.
-}
 \end{table}
 
 With parameters defined in Table \ref{tab:params}, the potential reproduces the properties
-of the ethylene $\pi$ cloud system with a good accuracy: relative errors on the ionisations
-energy and the energies of the HOMO orbital of 80\% and 3\% respectively (Table \ref{tab:res_ourPP}).
+of the ethylene $\pi$ cloud system with a good accuracy: relative errors on the ionisation
+energy and the energies of the HOMO orbital of 8\% and 3\% respectively (Table \ref{tab:res_ourPP}).
 
 \begin{table}[ht]
-\begin{tabular}{llll}
-\hline\hline
-& $\Delta_{ST}$  & I.E.  & $\varepsilon_{HOMO}$  \\
-\hline
-Reference Values & 3.533 & 9.091 & -10.363 \\
-Optimal pseudo-potential & 3.533 & 9.806 & -10.062 \\
-\hline\hline
-\end{tabular}
 \caption{\label{tab:res_ourPP}Comparison of the
 singlet-triplet splitting ($\Delta_{ST}$), ionisation
 energy (I.E.) and energy of the HOMO orbital ($\varepsilon_{HOMO}$)
@@ -400,27 +390,35 @@ The $\Delta_{ST}$ values were obtained as the difference
 between the lowest triplet (in an unrestricted formalism) and the lowest singlet state
 (in a restricted formalism).
 Calculations are performed at the HF/def-SV(P) level, values are in atomic eV.}
+\begin{tabular}{llll}
+\hline\hline
+& $\Delta_{ST}$  & I.E.  & $\varepsilon_{HOMO}$  \\
+\hline
+Reference Values & 3.533 & 9.091 & -10.363 \\
+Optimal pseudo-potential & 3.533 & 9.806 & -10.062 \\
+\hline\hline
+\end{tabular}
 \end{table}
 
 \section{Results and discussion}
 
 \subsection{Preliminary note}
-The extraction done in the previous section was at the HF/def2-SV(P) level.
+The extraction done in the previous section was at the HF/def-SV(P) level.
 We intend to show that there is no need for reparametrisation of the potential
-when used in another framework.
+when used with other methods.
 Thus, in the following sections, we use HF and four functionals in the DFT framework:
 one GGA (PBE), one meta-GGA (TPSS) and their hybrid variants (PBE0 and TPSSh).
-Furthermore, the parametrization was done with ground state calculations only:
+Furthermore, the parametrisation was done with ground state calculations only:
 the $\Delta_{ST}$ values are obtained as a difference between the lowest singlet (ground state)
 and the lowest triplet (ground state in the triplet space).
-Yet, we shall use this potential in the TD-DFT framework, which uses the virtual orbitals.
+We then go on to use this potential in the TD-DFT framework, which uses the virtual orbitals.
 We show in the last section that results obtained within the TD-DFT framework
 match the reference calculations from both the quantitative (excitation energies match)
 and qualitative (excitations are described by the same orbitals) point of view.
-Finally, despite the fact that the extraction was done on a non aromatic system,
+Finally, despite the fact that the extraction was done on a non-aromatic system,
 we perform calculations on fused ring aromatic systems.
-Again, these calculations are succesfull.
-As a consequence, one can say that the potential extracted on ethene at the HF/def2-SV(P)
+Again, these calculations are succesful.
+As a consequence, one can say that the potential extracted on ethene at the HF/def-SV(P)
 level is free of obvious transferability problems.
 
 \subsection{Computational Details}
@@ -431,40 +429,43 @@ Wherever possible, planar (C\(_{S}\)) symmetry is used.
 The convergence energy is \(10^{-7}\)H (\texttt{\$scfconv = 7}) for SCF and \(10^{-6}\)H for DFT.
 When running these calculations the occupation of orbitals is specified manually in the TURBOMOLE control file.
 
-\textbf{Chain Alkenes, Ring Molecules}. In additional to Hartree-Fock calculations, DFT is used with PBE0, PBE, TPSS and TPSSh functionals. \cite{pbe0,pbe,tpss,tpssh} The integration grid size is set at \(m4\). Also used are TD-DFT calculations, where the Tamm-Dancoff approximation (CIS) \cite{tammdancoff} is switched on to avoid triplet instability.
+\textbf{Chain Alkenes, Ring Molecules}. In addition to Hartree-Fock calculations, DFT is used with PBE0, PBE, TPSS and TPSSh functionals. \cite{pbe0,pbe,tpss,tpssh} The multiple m4 grid is used for integration. Also performed are TD-DFT calculations, where the Tamm-Dancoff approximation (CIS) \cite{tammdancoff} is switched on to avoid triplet instability.
 
 \subsection{Alkene chains: C\(\mathbf{_{2n}}\)H\(\mathbf{_{2n+2}}\), \(\mathbf{2 \leq n \leq 12}\)}
 
 Taking the optimal parameters we test them against a series of chain alkenes up to
 length C\(_{12}\)H\(_{14}\), using a variety of functionals. 
 In each case, the geometry of the reference system is optimised according to the method used,
-before taking the reference geometry and applying the pseudo-potentials from Table \ref{tab:res_ourPP}.
+before taking the reference geometry and applying the pseudo-potentials from Table \ref{tab:params}.
 Figure \ref{fig:alkenes_hf_dft} shows the results.
 Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested. The pattern of increasing HOMO energy and decreasing cation-singlet and triplet-singlet energies seen in the reference systems is well replicated by the pseudo-alkenes, with the energies following the same gradient.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=8cm]{short_pbe0_homo}
-\includegraphics[width=8cm]{short_pbe0_ie}
-\includegraphics[width=8cm]{short_pbe0_st}
-\includegraphics[width=8cm]{short_pbe0_tddft}
+\includegraphics[width=7cm]{short_pbe0_homo}
+\includegraphics[width=7cm]{short_pbe0_ie_xtic}
+\includegraphics[width=7cm]{short_pbe0_st_xtic}
+\includegraphics[width=7cm]{short_pbe0_tddft}
 \end{center}
-\caption{Comparison of the HOMO energy ($\varepsilon_{HOMO}$),
-the ionisation energy (I.E.),
-the first singlet-triplet $\pi-\pi*$ excitation energy ($\Delta_{ST}$ and TD-DFT)
+\caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
+the ionisation (I.E.), and
+the first singlet-triplet $\pi-\pi*$ excitation ($\Delta_{ST}$ and TD-DFT) energies
 between the
 all electron reference system and the optimal pseudo-potential across a range of chain alkenes.
-The $\Delta_{ST}$ values were obtained as the difference
-between the lowest $\pi*$ triplet (in an unrestricted formalism) and the lowest singlet state
-(in a restricted formalism).
-Calculations were done at the PBE0/def-SV(P) level.}
+The $\Delta_{ST}$ values are the difference
+between the lowest $\pi*$ triplet (unrestricted formalism) and the lowest singlet state
+(restricted formalism).
+Calculations are at the PBE0/def-SV(P) level.}
 \label{fig:alkenes_hf_dft}
 \end{figure}
 
 \begin{table}[ht]
+\caption{Mean relative errors (in percent) across methods (HF or different functionals)
+for short chain alkenes  (C\(_{2}\)-C\(_{12}\)).
+The basis set is def-SV(P).}
 \begin{tabular}{l r r r r r }
 \hline \hline
-                        & HF & PBE0 & PBE & TPSS & TPSSh \\
+\%-error                & HF & PBE0 & PBE & TPSS & TPSSh \\
 \hline
 $\varepsilon_{HOMO}$    & 1.3 & 4.0 & 8.5 & 12.0 &  9.7 \\
 I.E.                    & 5.3 & 6.0 & 8.1 & 10.1 &  9.0 \\
@@ -472,9 +473,6 @@ $\Delta_{ST}$           & 4.1 & 3.6 & 7.5 & 13.3 & 11.4 \\
 TD-DFT $\pi-\pi*$       & 11.6 & 2.6 & 2.8 &  6.3 &  6.9 \\ 
 \hline\hline
 \end{tabular}
-\caption{Mean relative errors (in percent) across methods (HF or different functionals)
-for short chain alkenes  (C\(_{2}\)-C\(_{12}\)).
-The basis set is def-SV(P).}
 \label{table:alkene_errors}
 \end{table}
 
@@ -482,25 +480,25 @@ Also compared are TD-DFT results for this system and results of some of the auth
 which match to within 3\% (see supplementary materials).\cite{drujon_pseudopotentials_2013}
 %Let us recall here that in our previous work potentials were placed at the center of bonds.
 
-\subsection{Larger chains and fused rings}
+\subsection{Fused rings and larger chains}
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=8cm]{ring_pbe0_homo}
-\includegraphics[width=8cm]{ring_pbe0_ie}
-\includegraphics[width=8cm]{ring_pbe0_st}
-\includegraphics[width=8cm]{ring_pbe0_tddft}
+\includegraphics[width=7cm]{ring_pbe0_homo}
+\includegraphics[width=7cm]{ring_pbe0_ie}
+\includegraphics[width=7cm]{ring_pbe0_st}
+\includegraphics[width=7cm]{ring_pbe0_tddft}
 \end{center}
 
-\caption{Comparison of the HOMO energy ($\varepsilon_{HOMO}$),
-the ionisation energy (I.E.),
-the first singlet-triplet $\pi-\pi*$ excitation energy ($\Delta_{ST}$ and TD-DFT)
+\caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
+the ionisation (I.E.),
+the first singlet-triplet $\pi-\pi*$ excitation ($\Delta_{ST}$ and TD-DFT) energies
 between the
 all electron reference system and the optimal pseudo-potential across a range of ring molecules.
-The $\Delta_{ST}$ values were obtained as the difference
-between the lowest triplet (in an unrestricted formalism) and the lowest singlet state
-(in a restricted formalism).
-Calculations were done at the PBE0/def-SV(P) level.
+The $\Delta_{ST}$ values are the difference
+between the lowest triplet (unrestricted formalism) and the lowest singlet state
+(restricted formalism).
+Calculations are at the PBE0/def-SV(P) level.
 The C\(_{54}\)H\(_{18}\) molecule is represented in Figure \ref{fig:c54h18}.}
 \label{fig:rings_graphs}
 \end{figure}
@@ -520,9 +518,12 @@ by the pseudo-systems, and the percentage errors, displayed in Table
 \ref{table:ring_system_errors}, are similar.
 
 \begin{table}[ht]
+\caption{Mean relative errors (in percent) across methods (HF or different functionals)
+for ring-systems.
+The basis set is def-SV(P).}
 \begin{tabular}{l r r r r r }
 \hline\hline
-                        & HF & PBE0 & PBE & TPSS & TPSSH \\
+\%-error                & HF & PBE0 & PBE & TPSS & TPSSh \\
 \hline
 $\varepsilon_{HOMO}$    & 3.4 &  9.3  & 13.4 & 17.1 & 14.7 \\
 I.E.                    & 7.4 & 10.0  & 12.5 & 14.4 & 13.0 \\
@@ -530,36 +531,36 @@ $\Delta_{ST}$           & 3.3 &  1.9  &  1.7 &  6.8 &  6.7 \\
 TD-DFT $\pi-\pi*$       & 13.5 &  3.6  &  2.7 &  6.3 &  7.0 \\ 
 \hline\hline
 \end{tabular}
-\caption{Mean relative errors (in percent) across methods (HF or different functionals)
-for ring-systems.
-The basis set is def-SV(P).}
 \label{table:ring_system_errors}
 \end{table}
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=8cm]{long_pbe0_homo}
-\includegraphics[width=8cm]{long_pbe0_ie}
-\includegraphics[width=8cm]{long_pbe0_st}
-\includegraphics[width=8cm]{long_pbe0_tddft}
+\includegraphics[width=7cm]{long_pbe0_homo}
+\includegraphics[width=7cm]{long_pbe0_ie}
+\includegraphics[width=7cm]{long_pbe0_st}
+\includegraphics[width=7cm]{long_pbe0_tddft}
 \end{center}
 
-\caption{Comparison of the HOMO energy ($\varepsilon_{HOMO}$),
-the ionisation energy (I.E.),
-the first singlet-triplet $\pi-\pi*$ excitation energy ($\Delta_{ST}$ and TD-DFT)
+\caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
+the ionisation (I.E.),
+the first singlet-triplet $\pi-\pi*$ excitation ($\Delta_{ST}$ and TD-DFT) energies
 between the
 all electron reference system and the optimal pseudo-potential across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).
-The $\Delta_{ST}$ values were obtained as the difference
-between the lowest $\pi*$  triplet (in an unrestricted formalism) and the lowest singlet state
-(in a restricted formalism).
-Calculations were done at the PBE0/def-SV(P) level.}
+The $\Delta_{ST}$ values are the difference
+between the lowest $\pi*$  triplet (unrestricted formalism) and the lowest singlet state
+(restricted formalism).
+Calculations are at the PBE0/def-SV(P) level.}
 \label{fig:long_chain_graphs}
 \end{figure}
 
 \begin{table}[ht]
+\caption{Mean relative errors (in percent) across methods (HF or different functionals)
+for long chain alkenes (C\(_{20}\)-C\(_{100}\)).
+The basis set is def-SV(P).}
 \begin{tabular}{l r r r r r }
 \hline\hline
-                 & HF & PBE0 & PBE & TPSS & TPSSH \\
+\%-error          & HF & PBE0 & PBE & TPSS & TPSSh \\
 \hline
 $\varepsilon_{HOMO}$    &  1.8 &  7.3   &  11.3   &  16.7    &  13.6 \\
 I.E.                    & 25.1 &  6.7   &   9.4   &  10.3    &  11.6 \\
@@ -567,9 +568,6 @@ $\Delta_{ST}$           & 55.3 & 85.8   &  83.4   & 239.8    & 320.2 \\
 TD-DFT $\pi-\pi*$       & 30.1 &  1.0   &   6.1   &   5.6    &   2.9 \\ 
 \hline\hline
 \end{tabular}
-\caption{Mean relative errors (in percent) across methods (HF or different functionals)
-for long chain alkenes (C\(_{20}\)-C\(_{100}\)).
-The basis set is def-SV(P).}
 \label{table:long_alkene_errors}
 \end{table}
 
@@ -592,19 +590,23 @@ Yet, this effect is strengthened in the pseudo-potential calculations.
 The triplet instability of the system represented with pseudo-potentials
 is exacerbated.
 As already shown, this is fixed by using the Tamm-Dancoff approximation,
-as can bee seen from the excellent agreement obtained with TD-DFT.\ref{tammdancoff}
+as can be seen from the excellent agreement obtained with TD-DFT.\cite{tammdancoff}
 
 \begin{figure}
 \begin{center}
 \includegraphics[width=8cm]{long_pbe0_s2}
 \end{center}
 \caption{Comparison of $S^2$ expectation values obtained for the calculation
-of the first triplet configuration in a SCF formalism, for reference
+of the first $\pi*$ triplet configuration in a SCF formalism, for reference
 and pseudo-systems.}
 \label{fig:ssquare}
 \end{figure}
 
 \begin{table}[ht]
+\caption{\label{tab:coef}Comparison of the weights (all electron \emph{vs.} pseudo-potentials)
+of the excitations obtained with TD-DFT
+to represent the triplet excited state from the closed shell singlet state.
+Example case of C$_{50}$H$_{52}$.}
 \begin{tabular}{c c r r}
 \hline\hline
 \multicolumn{2}{c}{Excitation} & \multicolumn{2}{c}{Weight(\%)}\\
@@ -615,10 +617,6 @@ and pseudo-systems.}
 \multicolumn{2}{c}{23 a" \(\rightarrow\) 28 a"} & 3.6  &    5.2  \\
 \hline\hline
 \end{tabular}
-\caption{\label{tab:coef}Comparison of the weights (all electron \emph{vs.} pseudo-potentials)
-of the excitations obtained with TD-DFT
-to represent the triplet excited state from the closed shell singlet state.
-Example case of C$_{50}$H$_{52}$.}
 \end{table}
 
 In order to show that the recovering of the agreement between the pseudo-potential
@@ -639,8 +637,8 @@ In this work, we tackled the two main problems of the initial version of our
 molecular potentials.
 Firstly, the new pseudo-potentials for sp$^2$ hybridised
 atoms are completely atomic and, even if the directionality of the bonding pattern
-has to be fullfilled by correctly positioning the \(s\) potentials, no potentials need to
-be added relative to the position of two atoms.
+has to be fullfilled by correctly positioning the \(s\)-potentials. No potentials need to
+be added relative to the position of more than one atom.
 Secondly, we gave a physical meaning to all the pseudo-potential
 terms.
 Contrary to our previous attempt, we do not rely on the "no collapse" term.
