correct image names.

--- a/main.tex
+++ b/main.tex
@@ -443,8 +443,8 @@ Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for e
 \begin{figure}
 \begin{center}
 \includegraphics[width=7cm]{short_pbe0_homo}
-\includegraphics[width=7cm]{short_pbe0_ie_xtic}
-\includegraphics[width=7cm]{short_pbe0_st_xtic}
+\includegraphics[width=7cm]{short_pbe0_ie}
+\includegraphics[width=7cm]{short_pbe0_st}
 \includegraphics[width=7cm]{short_pbe0_tddft}
 \end{center}
 \caption{Comparison of the HOMO ($\varepsilon_{HOMO}$),
