The paragraph on the p potential has been rewritten

--- a/main.tex
+++ b/main.tex
@@ -270,7 +270,6 @@ a hydrogen-like "pseudo-carbon", with a nuclear charge of \(Z_{nucleus} = 1\), a
 There are now no H atoms, and the system is surrounded by three potential sets at a planar distance of \(d\), each consisting of 
 two \(s\)-shaped potentials with a distance above and below the \(xy\)-plane of \(c\). A further \(p\)-shaped potential is applied
 directly to the pseudo-carbon.
-
 Based on Equation~\ref{eq:ourPP}, the complete pseudo-potential reads as:
 
 \begin{align}
@@ -284,8 +283,8 @@ Based on Equation~\ref{eq:ourPP}, the complete pseudo-potential reads as:
 
 In this article, we fix \(c = 0.25\;a.u.; d=0.5\;a.u.\), Table~\ref{tab:pos}.
 This gives us four variables to manipulate the properties of the system, 
-notably the $A$ coefficient and the $\alpha$ exponent for the $p$ potential and
-the $A'$ coefficient and $\alpha'$ exponent for the six $s$ potentials.
+notably the $A$ coefficient and the $\alpha$ exponent for the $p$ potential, and
+the $A'$ coefficient and $\alpha'$ exponent, which will be common to the six $s$ potentials.
 
 \begin{table}[ht]
 \caption{\label{tab:pos}Position of the $s$ potentials around the pseudo carbon atom, $c=0.25\;a.u.$ and $d=0.5\;a.u.$ as in Figure~\ref{figure:ref_pseudo_diagram}.
@@ -327,23 +326,46 @@ the $s$ potential will be extracted on some energy criteria.
 
 The  \(p_{z}\) pseudo-potential is thought here to mimic the effect of an electron-screened nucleus.
 In order to make an educated guess of the parameters of this new potential, we 
-consider a simplification of the pz component of the p potential and we write it as:
+consider  the $p_z$ component of the $p$ potential and we write it as:
 \begin{equation}
-\chi = e^{-\alpha r^{2}},\qquad \widehat{p} = Z_{pseudo} | \chi \rangle \langle \chi |
+\widehat{p_z} = -\frac{Z_{pseudo}}{r} | \chi_{p_z} \rangle \langle \chi_{p_z} |
 \end{equation}
 
-We need to find an expression that can give us a value for \(Z_{eff}\). From an all-electron HF
-reference calculation on the CH\(^{\bullet}_{3}\) system, the expected distance of the electron 
-from the nucleus \( \langle r \rangle \) can be computed, defined as 
+where $\chi_{p_z}$ is a $p_z$ gaussian function with exponent $\alpha$,
+and $-{Z_{pseudo}}$ corresponds to the $A$ parameter. 
+If $\chi_{p_z}$ were exactly the $\pi$ molecular orbital \(\psi_{p_{z}}\), which hosts the
+radical, the expected value of the $\widehat{p_z}$ operator for \(\psi_{p_{z}}\) would
+give us the effect of the screened nucleus. Since we want a simple expression for
+$\chi_{p_z}$, by only one function, the $-{Z_{pseudo}}$ parameter should contain a
+correction for the overlap of the $\chi_{p_z}$ and the reference \(\psi_{p_{z}}\) 
+molecular orbital. We define:
 \begin{equation}
-\langle r \rangle = \langle \psi_{p_{z}} | r | \psi_{p_{z}} \rangle
+S = \langle \psi_{p_{z}} | \chi \rangle
+\end{equation}
+Knowing that our hydrogen-like pseudo-system already contains a charge, \(Z_{nucleus}=1\), 
+we subtract this \(Z_{nucleus}\)  from the desired effective nucleus charge \(Z_{eff}\),
+and we correct by the overlap influence by writing: 
+\begin{equation}
+Z_{pseudo} = -A = (Z_{eff} - Z_{nucleus})S^{-2}
+\end{equation}
+
+%The parameter $\alpha$ will be chosen to maximise the overlap $S$ and the parameter
+%$A$ will be computed from $Z_{eff}$ and $S$.
+
+We need now to find an expression for \(Z_{eff}\). From an all-electron HF
+reference calculation on the CH\(^{\bullet}_{3}\) system, the expected 
+distance of the electron from the nucleus is computed: 
+\begin{equation}
+\langle r \rangle = \langle \psi_{p_{z}} | r | \psi_{p_{z}} \rangle \approx 1.8 \ a.u.
 \label{equation:exp_r}
 \end{equation}
 
-where \(\psi_{p_{z}}\) is the $\pi$ molecular orbital.
+%where \(\psi_{p_{z}}\) is the $\pi$ molecular orbital.
+
 
 %need to find an expression for \(Z_{eff}(\langle r \rangle)\); \(Z_{eff}\) being the total nuclear attraction the electron would feel in the real CH\(^{\bullet}_{3}\) system, taking into account the screening effect of the core electrons that would be present in an all-electron model; and \( \langle r \rangle \) being the expected distance of the electron from the nucleus.
 
+In the pseudo-system there is only one explicit electron in a $p_z$ orbital. 
 The analytical form of the \(p_{z}\) orbital for a hydrogen-like atom is\cite{nyu_h_solutions}
 \begin{equation}
 \phi_{210} = \frac{1}{\sqrt{\pi}} \frac{Z_{eff}}{2a_{0}} ^{\frac{5}{2}} re^{-\frac{Z_{eff}r}{2a_{0}}} \cos \theta
@@ -351,7 +373,7 @@ The analytical form of the \(p_{z}\) orbital for a hydrogen-like atom is\cite{ny
 and from this we obtain 
 \begin{equation}
 \label{equation:PsirPsi}
-\langle \phi_{210} | r | \phi_{210} \rangle = \frac{5a_{0}}{Z_{eff}}
+\langle r \rangle = \langle \phi_{210} | r | \phi_{210} \rangle = \frac{5a_{0}}{Z_{eff}}
 \end{equation}
 %Next, we need to find a value for \( \langle r \rangle \). We can do this by calculating
 %
@@ -362,9 +384,10 @@ and from this we obtain
 %
 %where \(\psi_{p_{z}}\) are the molecular orbitals extracted from a reference calculation of CH\(^{\bullet}_{3}\). 
 
-From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). 
+From Equation \ref{equation:exp_r} and Equation \ref{equation:PsirPsi} follows
+that \(Z_{eff} \approx 3.6\). 
 
-%%TO BE DISCUSSED BEFORE
+%%%TO BE DISCUSSED BEFORE
 %It isn't sufficient simply to use this value however, as our simple pseudo-potential will not overlap neatly with the $2p_{z}$ orbital itself. It is therefore necessary to correct for the imperfect overlap. Even if we shall use the semi-local pseudo-potential definition for the calculations, for a quick evaluation of overlap effects between the basis set and the pseudo-potential, we assume a non-local pseudo-potential definition. We define:
 %\begin{equation}
 %S = \langle \psi_{p_{z}} | \chi \rangle
@@ -382,12 +405,15 @@ From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.
 %Z_{pseudo} = (Z_{eff} - Z_{nucleus})S^{-2}
 %\end{equation}
 
-TO REVIEW WITH TRUE NUMBERS
 We now have the power to choose a \(p_{z}\) pseudo-potential solely based on the Gaussian
 exponent, and the \(Z_{eff}\) then follows from the above.
-Clearly, the exponent should be chosen to give us a strong overlap with the molecular
+For this case study, 
+the exponent was chosen to give us a strong overlap with the molecular
 orbital we wish to influence.
-Hence we arrive at a \(p_{z}\)-potential that should be physically meaningful. The optimal values that we found, those which best reproduced the chosen physical characteristics of the system, were a coefficient of $-3.91$ and an exponent of $0.624$. See the supplementary information for further detail.
+Hence we arrive at a \(p_{z}\)-potential that should be physically meaningful. 
+The optimal values that we found, those which best reproduced the chosen 
+physical characteristics of the system, were a coefficient of $A=-2.81$ for 
+an exponent of $0.261$ and an overlap of 0.79. 
 
 \subsubsection{Extraction of the six $s$ potentials parameters}
 Now that we have set up the $p$ potential placed at the nucleus, we shall define
